fix: hide scrollbar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -148,3 +148,10 @@ h6[id]:before {
     text-decoration: underline;
   }
 }
+
+.hide-scrollbar {
+  scrollbar-width: none;
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
